--- a/composer.json
+++ b/composer.json
@@ -17,5 +17,13 @@
             "name": "Adaías Magdiel",
             "email": "adaiasmagdiell@gmail.com"
         }
-    ]
+    ],
+    "require-dev": {
+        "pestphp/pest": "^3.5"
+    },
+    "config": {
+        "allow-plugins": {
+            "pestphp/pest-plugin": true
+        }
+    }
 }
